doc: added deprecated flags to raw data source methods.

--- a/classes/drawing.matrixtransform.html
+++ b/classes/drawing.matrixtransform.html
@@ -235,7 +235,7 @@
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class">
 					<a name="matrix" class="tsd-anchor"></a>
 					<h3>matrix</h3>
-					<div class="tsd-signature tsd-kind-icon">matrix<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">Float64Array</span></div>
+					<div class="tsd-signature tsd-kind-icon">matrix<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">Float64Array</span><span class="tsd-signature-symbol"> =&nbsp;new Float64Array(6)</span></div>
 					<aside class="tsd-sources">
 						<p>Implementation of <a href="../interfaces/drawing.matrixtransformdescription.html">MatrixTransformDescription</a>.<a href="../interfaces/drawing.matrixtransformdescription.html#matrix">matrix</a></p>
 						<ul>
@@ -509,7 +509,7 @@
 							<aside class="tsd-sources">
 								<p>Overrides <a href="drawing.transform.html">Transform</a>.<a href="drawing.transform.html#type">type</a></p>
 								<ul>
-									<li>Defined in drawing/transform/transforms.ts:317</li>
+									<li>Defined in drawing/transform/transforms.ts:316</li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -555,7 +555,7 @@
 							<aside class="tsd-sources">
 								<p>Overrides <a href="drawing.transform.html">Transform</a>.<a href="drawing.transform.html#serialize">serialize</a></p>
 								<ul>
-									<li>Defined in drawing/transform/transforms.ts:361</li>
+									<li>Defined in drawing/transform/transforms.ts:360</li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -612,7 +612,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in drawing/transform/transforms.ts:326</li>
+									<li>Defined in drawing/transform/transforms.ts:325</li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
