feat: updated extension documentation to version 1.5

--- a/modules/package.html
+++ b/modules/package.html
@@ -67,7 +67,7 @@
 			<section class="tsd-panel tsd-comment">
 				<div class="tsd-comment tsd-typography">
 					<h2 id="package-definition">Package Definition</h2>
-					<p>In the quickstart we already created a very simple package definition in the file <strong>package.json</strong>. Although it&#39;s sufficient to get us started, there are a lot more settings to be discovered.</p>
+					<p>In the quickstart we already created a very simple package definition in the file <code>package.json</code>. Although it&#39;s sufficient to get us started, there are a lot more settings to be discovered.</p>
 					<p><br/><a id="markdown-localization" name="localization"></a></p>
 					<h3 id="localization">Localization</h3>
 					<p>Every text that appears in the user interface of PiWeb can be localized. Simply replace the plain text with a localization dictionary:</p>
